--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <span class="information__navigation"><i class='bx bx-cake'></i>July 17, 1996</span>
                             <span class="information__navigation"><i class='bx bx-male' ></i>Nam</span>
                             <span class="information__navigation"><i class='bx bx-map-pin'></i>Vinh Long Provice</span>
-                            <a href="tel:0398188157" class="information__navigation information__navigation--link"><i class='bx bx-phone-call' ></i>Phone/Zalo</a>
+                            <a href="tel:0398188157" class="information__navigation information__navigation--link"><i class='bx bx-phone-call' ></i>Phone/Zalo: (+84)398188157</a>
                             <a href="mailto:tlthong29@gmail.com" class="information__navigation information__navigation--link"><i class='bx bx-mail-send' ></i>Email: tlthong29@gmail.com</a>
                             <a href="https://facebook.com/Thailuuthong" class="information__navigation information__navigation--link"><i class='bx bxl-facebook-circle' ></i>Facebook: Thailuuthong</a>
                             <a href="https://www.youtube.com/channel/UCXS-J7kAC9-LVD1Tx_s3gfQ" class="information__navigation information__navigation--link"><i class='bx bxl-youtube' ></i>Youtube: Thong Thai</a>
