--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./base.css">
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./responsive.css">
+    <link rel="shortcut icon" href="./Images/thong_favicon.jpg" type="image/x-icon">
     <title>Thong Thai| Resume </title>
 </head>
 <body>
