--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="so yeu ly lich thong thai">
+    <meta name="keywords" content="resume thai luu thong">
+    <meta name="keywords" content="so yeu ly lich thai luu thong">
+    <meta name="keywords" content="so yeu ly lich thong thai">
+    <meta name="keywords" content="tlthong">
+    <meta name="keywords" content="tlthong.github.io">
+    <meta name="keywords" content="tlthong.github.io/tlthong">
+    <meta name="keywords" content="thai luu thong">
+    <meta name="description" content="Resume | Thai Luu Thong">
+    <meta name="description" content="Sơ yếu lý lịch Thái Lưu Thông">
     <meta name="author" content="Thong thai">
     <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="./base.css">
