--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <meta name="description" content="Resume | Thai Luu Thong">
     <meta name="description" content="Sơ yếu lý lịch Thái Lưu Thông">
     <meta name="author" content="Thong thai">
+    <meta property = "og: title" content = "tlthong.github.io/tlthong" />
+    <meta property = "og: description" content = "Resume Thai Luu Thong | Trang cá nhân của Thái Lưu Thông" />
+    <meta property = "og: image" content = "https://scontent.fsgn5-8.fna.fbcdn.net/v/t1.6435-9/126518014_3006632636102860_7400028550372572244_n.jpg?_nc_cat=109&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=iJk-Bo2tt6UAX_ktP4_&_nc_ht=scontent.fsgn5-8.fna&oh=ea10abb3a63f19cbdb3f8c6b27f3fa3e&oe=619548FF" />
+    <meta property = "og: image: width" content = "1200" /> 
+    <meta property = "og: image: height" content = "630" />
     <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="./base.css">
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
