--- a/index.html
+++ b/index.html
@@ -4,21 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="resume thai luu thong">
-    <meta name="keywords" content="so yeu ly lich thai luu thong">
-    <meta name="keywords" content="so yeu ly lich thong thai">
-    <meta name="keywords" content="tlthong">
-    <meta name="keywords" content="tlthong.github.io">
-    <meta name="keywords" content="tlthong.github.io/tlthong">
-    <meta name="keywords" content="thai luu thong">
-    <meta name="description" content="Resume | Thai Luu Thong">
-    <meta name="description" content="Sơ yếu lý lịch Thái Lưu Thông">
-    <meta name="author" content="Thong thai">
+    <meta name="robots" content="index,follow,all">
+    <meta name="keywords" content="resume thai luu thong, so yeu ly lich thai luu thong, so yeu ly lich thong thai, tlthong, tlthong.github.io, tlthong.github.io/tlthong, thai luu thong">
+    <meta name="description" content="Resume | Thai Luu Thong, Sơ yếu lý lịch Thái Lưu Thông">
+    <meta name="title" content="Resume | Thai Luu Thong">
+    <meta name="author" content="Thongthai">
     <meta property = "og: title" content = "tlthong.github.io/tlthong" />
     <meta property = "og: description" content = "Resume Thai Luu Thong | Trang cá nhân của Thái Lưu Thông" />
-    <meta property = "og: image" content = "https://scontent.fsgn5-8.fna.fbcdn.net/v/t1.6435-9/126518014_3006632636102860_7400028550372572244_n.jpg?_nc_cat=109&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=iJk-Bo2tt6UAX_ktP4_&_nc_ht=scontent.fsgn5-8.fna&oh=ea10abb3a63f19cbdb3f8c6b27f3fa3e&oe=619548FF" />
+    <meta property = "og: image" content = "https://scontent.fsgn5-8.fna.fbcdn.net/v/t1.6435-9/126518014_3006632636102860_7400028550372572244_n.jpg?_nc_cat=109&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=iJk-Bo2tt6UAX_3cKYM&_nc_ht=scontent.fsgn5-8.fna&oh=b0fc0301812bb715d03d4542ce74fcf8&oe=619548FF" />
     <meta property = "og: image: width" content = "1200" /> 
     <meta property = "og: image: height" content = "630" />
+    <meta property="og:site_name" content="Resume Thai luu thong" />
+    <meta property="og:url" content="https://tlthong.github.io/" />
+    <meta name="thumbnail" content="https://scontent.fsgn5-8.fna.fbcdn.net/v/t1.6435-9/126518014_3006632636102860_7400028550372572244_n.jpg?_nc_cat=109&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=iJk-Bo2tt6UAX_3cKYM&_nc_ht=scontent.fsgn5-8.fna&oh=b0fc0301812bb715d03d4542ce74fcf8&oe=619548FF" />
     <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="./base.css">
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
